--- a/ChatGPT 1/Test/Win32/Debug/dunit.ini
+++ b/ChatGPT 1/Test/Win32/Debug/dunit.ini
@@ -1,7 +1,7 @@
 [GUITestRunner Config]
 AutoSave=1
-Left=182
-Top=182
+Left=951
+Top=246
 Width=508
 Height=505
 Maximized=0
@@ -23,4 +23,10 @@ SelectTestedNode=1
 WarnOnFailTestOverride=0
 PopupX=350
 PopupY=30
+
+[Tests.ChatGPT_1Tests.exe]
+
+[Tests.ChatGPT_1Tests.exe.TestTThreadSafeSingleton]
+
+[Tests.ChatGPT_1Tests.exe.TTestThreadSafeSingleton]
 
