--- a/FamilyAccountBot/package.json
+++ b/FamilyAccountBot/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-telegram-bot-api": "^0.61.0"
+    "@types/sqlite3": "^3.1.8",
+    "node-telegram-bot-api": "^0.61.0",
+    "sqlite": "^4.2.0",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
