--- a/FamilyAccountBot/.vscode/launch.json
+++ b/FamilyAccountBot/.vscode/launch.json
@@ -1,15 +1,26 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-      {
-        "type": "node",
-        "request": "launch",
-        "name": "Launch Bot",
-        "program": "${workspaceFolder}/dist/bot.js",
-        "preLaunchTask": "npm: build",
-        "sourceMaps": true,
-        "console": "integratedTerminal"
-      }
-    ]
-  }
-  
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Bot",
+      "program": "${workspaceFolder}/dist/bot.js",
+      "preLaunchTask": "npm: build",
+      "sourceMaps": true,
+      "console": "integratedTerminal"
+    },
+    {
+      "name": "Debug Jest Tests",
+      "type": "node",
+      "request": "launch",
+      "runtimeArgs": [
+        "--inspect-brk",
+        "${workspaceRoot}/node_modules/jest/bin/jest.js",
+        "--runInBand"
+      ],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen"
+    }
+  ]
+}
