--- a/FamilyAccountBot/package.json
+++ b/FamilyAccountBot/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc",
     "start": "node ./dist/bot.js"
   },
@@ -18,7 +18,10 @@
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/node": "^18.16.3",
-    "@types/node-telegram-bot-api": "^0.61.6"
+    "@types/node-telegram-bot-api": "^0.61.6",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0"
   }
 }
